hard-gists/1650418/run.log
=== Docker Run Log for 1650418 ===
Started at: Mi 29. Okt 12:21:51 CET 2025

[2025-10-29 12:21:52] START: Running container for 1650418
[2025-10-29 12:21:52] SUCCESS: Container c4ec76f27004f0cb50eb0e70e999f3ea1ac1d853ef636e957c795abe3865ef08 started for 1650418
=== Container logs for 1650418 ===
  File "/snippet.py", line 77
    except psycopg2.OperationalError, ex:
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 1650418 ===
[2025-10-29 12:21:54] INFO: Container c4ec76f27004f0cb50eb0e70e999f3ea1ac1d853ef636e957c795abe3865ef08 has stopped
